# secp256k1

./: .gitignore  CMakeLists.txt
include/: secp256k1_ecdh.h
src/modules/ecdh/: main_impl.h  tests_impl.h
